--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,9 @@ rvm:
 - 1.9.3
 - jruby-19mode
 - rbx-2
+
+addons:
+postgresql: "9.3"
+before_script:
+- psql -c 'create database travis_ci_test;' -U postgres
+- cp config/database.yml.travis config/database.yml
