--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,14 @@ language: ruby
 rvm:
 - 2.1.2
 addons:
-  postgresql: "9.3"
+  postgresql: '9.3'
 before_script:
-  -  psql -c 'create database travis_ci_test;' -U postgres
-  -  cp config/database.yml.travis config/database.yml
-
+- psql -c 'create database travis_ci_test;' -U postgres
+- cp config/database.yml.travis config/database.yml
+deploy:
+  provider: heroku
+  api_key:
+    secure: ivKLl48IoGVGfxXdIhiikt5FrHNTXD8HCk0XWoepKYrToC/Fo6HN/wHTlZr1qfCYMRKW15wPDEYtbKo9QHcpnEFwGEMqjzbouQgYwOtMg2cmieAVgSI3P8kPa7a7jZDHHozEzwSg0ETNb5uI+ZLWX24wPeTznNsy0ZJHopCPJVw=
+  app: vast-tundra-6977
+  on:
+    repo: tnumata3632/rails_enpit
